# hip_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  docs.yaml  release.yaml
github-issues/: create-mem-management-issues.sh
src/: lib.rs  result.rs  types.rs
src/bindings/: bindings.rs  native.cpp  wrapper.hpp
src/core/: device.rs  device_type.rs  device_types.rs  flags.rs  hip_call.rs  init.rs  memory.rs  mod.rs  result.rs  stream.rs
src/hip_sys/: mod.rs  wrapper.hpp
src/hipblas/: blas_call.rs  gemm.rs  handle.rs  mod.rs  result.rs  types.rs
src/runtime/: device.rs  init.rs  memory.rs  mod.rs  result.rs  safe.rs  types.rs
src/runtime/sys/: mod.rs
src/sys/: wrapper.h
src/types/: flags.rs  memory.rs  mod.rs  result.rs
