[package]
name = "hip-rs"
version = "1.0.0"
edition = "2021"
authors = ["Anders Smedegaard Pedersen <anders@smedegaard.io>"]
description = "A Rust wrapper for AMD's Heterogeneous-computing Interface for Portability (HIP), used for GPU interop."
documentation = "https://github.com/smedegaard/hip-rs"
repository = "https://github.com/smedegaard/hip-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hip", "GPU", "accelerators", "AMD", "ffi"]
build = "build.rs"

[dependencies]
# For C++ bindings
bindgen = "0.69.1"
semver = "1.0.23"
uuid = "1.11.0"
log = "0.4"
env_logger = "0.10"
bitflags = "2.6.0"

[build-dependencies]
# For build script
cc = "1.0"
bindgen = "0.69.1"
